changed the directory structure of the project

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -1,7 +1,10 @@
+@import url(https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css);
+
 * {
     max-width: 1300px;
     margin: auto;
     text-align: center;
+    font-size: 18px;
 }
 
 form{
