--- a/backend/templates/add_new_order.html
+++ b/backend/templates/add_new_order.html
@@ -4,11 +4,13 @@
     <title>הזמנה חדשה</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+
 </head>
 <body>
 
-    <img src="{{url_for('static', filename='images/logo2.png')}}" class="logo" alt="test">
-    <h1>הוסף הזמנה חדשה</h1>
+    <a href="/"><img src="{{url_for('static', filename='images/NOMINOMI-logos_white.png')}}" class="logo" alt="test"></a> 
+      <h1>הוסף הזמנה חדשה</h1>
     {% if success == "0" %}
     <h2>הזמנה הוספה בהצלחה</h2>
     {% elif success == "1" %}
@@ -16,31 +18,62 @@
     {% endif %}
 
     <form action="/add_new_order" method="POST">
-        <input type="text" name="name" class="form-control" id="employee_name" placeholder="שם מלא" required>
-        <input type="number" name="phone" class="form-control" id="employee_age" placeholder="מספר טלפון" required>
-        <input type="text" name="address" class="form-control" id="employee_department" placeholder="כתובת משלוח" required>
-        <input type="datetime-local" name="shipment_date" class="form-control" id="employee_id" placeholder="תאריך משלוח" required>
+      <div class="row">
+        <div class="col">
+          <input type="text" name="name" class="form-control" id="employee_name" placeholder="שם מלא" required>
+        </div>
+        <div class="col">
+          <input type="number" name="phone" class="form-control" id="employee_age" placeholder="מספר טלפון" required>
+        </div>
+      </div>
+        
+      <br>
 
-        <select class="form-select" aria-label="Default select example" name="payment_method" required>
+      <div class="row">
+        <div class="col">
+          <input type="text" name="address" class="form-control" id="employee_department" placeholder="כתובת משלוח" required>
+        </div>
+        <div class="col">
+          <input type="datetime-local" name="shipment_date" class="form-control" id="employee_id" placeholder="תאריך משלוח" required>
+        </div>
+      </div>
+
+      <br>
+
+      <div class="row">
+        <div class="col">
+          <select class="form-select" aria-label="Default select example" name="payment_method" required>
             <option value="ביט">ביט</option>
             <option selected value="מזומן">מזומן</option>
           </select>
-
-        <select class="form-select" aria-label="Default select example" name="paid" required>
+        </div>
+        <div class="col">
+          <select class="form-select" aria-label="Default select example" name="paid" required>
             <option value="שולם">שולם</option>
             <option selected value="לא שולם">לא שולם</option>
         </select>
+        </div>
+      </div>
 
-        <select class="form-select" aria-label="Default select example" name="delivered" required>
+    <br>
+
+      <div class="row">
+        <div class="col">
+          <select class="form-select" aria-label="Default select example" name="delivered" required>
             <option value="נמסר">נמסר</option>
             <option selected value="לא נמסר">לא נמסר</option>
           </select>
+        </div>
+        <div class="col">
+          <input type="number" name="quantity" class="form-control" id="quantity" placeholder="כמות" required>
+        </div>
+      </div>
 
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg" style="margin: 20px;">הוסף הזמנה חדשה</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg" style="margin: 20px;">הוסף הזמנה חדשה</button>
     </form>
 
     <form action="/" method="GET">
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">דף בית</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">דף בית</button>
     </form>
     
 </body>
