--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -4,26 +4,27 @@
   <title>דף הבית</title>
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+
 </head>
 <body>  
-    <img src="{{url_for('static', filename='images/logo2.png')}}" class="logo" alt="test">
-    <div class="container main_section">
+    <a href="/"><img src="{{url_for('static', filename='images/NOMINOMI-logos_white.png')}}" class="logo" alt="test"></a>  
+     <div class="container main_section">     
         <div class="row">
             <div class="col">
                 <form action="/add_new_order" method="GET">
-                    <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">הזמנה חדשה</button>
+                    <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">הזמנה חדשה</button>
                 </form>
             </div>
 
             <div class="col">
                 <form action="/update_order" method="GET">
-                    <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">עדכן הזמנה</button>
+                    <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">עדכן הזמנה</button>
                 </form>
             </div>
             <div class="col">
                 <form action="/remove_order" method="GET">
-                    <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">מחיקת הזמנה</button>
+                    <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">מחיקת הזמנה</button>
                 </form>
             </div>
         </div>
@@ -31,17 +32,17 @@
         <div class="row">
             <div class="col">
                 <form action="/view_all_orders" method="GET">
-                    <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">כל ההזמנות</button>
+                    <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">כל ההזמנות</button>
                 </form>
             </div>
             <div class="col">
                 <form action="/view_next_five_days_orders" method="GET">
-                    <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">ההזמנות לחמישה ימים הקרובים</button>
+                    <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">ההזמנות לחמישה ימים הקרובים</button>
                 </form>
             </div>
             <div class="col">
                 <form action="/view_all_orders_undelivered" method="GET">
-                    <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">כל ההזמנות שלא נמסרו</button>
+                    <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">כל ההזמנות שלא נמסרו</button>
                 </form>
             </div>
 
@@ -51,7 +52,7 @@
         <div class="row">
             <div class="col">
                 <form action="/view_analytics" method="GET">
-                    <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">ניתוח נתונים</button>
+                    <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">ניתוח נתונים</button>
                 </form>
             </div>
         </div>
