--- a/backend/templates/remove_order.html
+++ b/backend/templates/remove_order.html
@@ -4,22 +4,24 @@
     <title>מחיקת הזמנה</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+
 </head>
 <body>
-    <img src="{{url_for('static', filename='images/logo2.png')}}" class="logo" alt="test">
+    <a href="/"><img src="{{url_for('static', filename='images/NOMINOMI-logos_white.png')}}" class="logo" alt="test"></a>
     <h1>מחיקת הזמנה</h1>
-    {% if success == "0" %}
+    {% if success == "True" %}
     <h2>הזמנה נמחקה!</h2>
-    {% elif success == "1" %}
-    <h2>יש בעיה</h2>
+    {% elif success == "False" %}
+    <h2>לא קיים הזמנה שמקושרת למספר זה</h2>
     {% endif %}
     <form action="/remove_order" method="POST">
         <input type="number" name="phone" class="form-control" id="phone" placeholder="מספר טלפון" required>
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg" style="margin: 20px;">מחק הזמנה</button>
+        <button type="submit" value="Submit" class="btn btn-danger text-nowrap btn-lg" style="margin: 20px;">מחק הזמנה</button>
     </form>
 
     <form action="/" method="GET">
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">דף בית</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">דף בית</button>
     </form>
 </body>
 </html>
