--- a/backend/templates/update_order.html
+++ b/backend/templates/update_order.html
@@ -4,9 +4,11 @@
     <title>עדכון הזמנה</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+
 </head>
 <body>
-    <img src="{{url_for('static', filename='images/logo2.png')}}" class="logo" alt="test">
+    <a href="/"><img src="{{url_for('static', filename='images/NOMINOMI-logos_white.png')}}" class="logo" alt="test"></a>  
     <h1>עדכון הזמנה</h1>
     {% if success == "True" %}
     <h2>הזמנה עודכנה!</h2>
@@ -16,7 +18,7 @@
     
     <form action="/is_order_exists" method="POST">
         <input type="number" name="phone" class="form-control" id="phone" placeholder="מספר טלפון" required>
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg" style="margin: 20px">בדוק אם הטלפון קיים במערכת</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg" style="margin: 20px">בדוק אם הטלפון קיים במערכת</button>
     </form>
 
     {% if is_exists == "True" %}
@@ -25,7 +27,6 @@
         <input type="number" name="phone" class="form-control" id="employee_age" value="{{ phone }}" required>
         <input type="text" name="address" class="form-control" id="employee_department" value="{{ address }}" required>
         <input type="datetime-local" name="shipment_date" class="form-control" id="employee_id" value="{{ shimpent_date}}" required>
-        <!-- <input type="text" name="payment_method" class="form-control" id="employee_id" value="{{ payment_method }}" required> -->
 
         <select class="form-select" aria-label="Default select example" name="payment_method" required>
             {% if payment_method == "ביט" %}
@@ -47,9 +48,6 @@
             {% endif %}
         </select>
 
-        <!-- <input type="text" name="paid" class="form-control" id="paid" value="{{ paid }}" required> -->
-        <!-- <input type="text" name="delivered" class="form-control" id="delivered" value="{{ delivered }}" required> -->
-
         <select class="form-select" aria-label="Default select example" name="delivered" required>
             {% if delivered == "נמסר" %}
                 <option selected value="נמסר">נמסר</option>
@@ -60,14 +58,16 @@
             {% endif %}
           </select>
 
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg" style="margin: 20px;">עדכן הזמנה</button>
+          <input type="number" name="quantity" class="form-control" id="quantity" value="{{ quantity }}" required>
+
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg" style="margin: 20px;">עדכן הזמנה</button>
     </form>
     {% elif is_exists == "False" %}
     <h2>אין מספר כזה במערכת</h2>
     {% endif %}
 
     <form action="/" method="GET">
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">דף בית</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">דף בית</button>
     </form>
 </body>
 </html>
