--- a/backend/templates/view_all_orders.html
+++ b/backend/templates/view_all_orders.html
@@ -4,28 +4,118 @@
     <title>כל ההזמנות</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+    <script
+  src="http://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" ></script>
+
+  <!-- dtBasicExample -->
 </head>
 <body>
-    <img src="{{url_for('static', filename='images/logo2.png')}}" class="logo" alt="test">
+    <a href="/"><img src="{{url_for('static', filename='images/NOMINOMI-logos_white.png')}}" class="logo" alt="test"></a>
     <h1>כל ההזמנות</h1>
     <div class="table-responsive container-fluid">
-        <table class="table table-hover">
-            <tr class="table-info ">
+        <table id="myTable" class="table table-dark table-hover table-bordered table-striped">
+            <thead>
+            <tr class="table-dark">
                 {% for header in headings %}
                 <th scope="col" >{{ header }}</th>
                 {% endfor %}
             </tr>
+            </thead>
+            <tbody>
                 {% for row in data %}
                     <tr>
                     {% for cell in row %}
-                        <td >{{ cell }}</td>
+                        <td>{{ cell }}</td>
                     {% endfor %}
+                    <td><a class="btn btn-info text-nowrap" href="/is_order_exists?phone={{ row[1] }}">עדכן</a></td>
+                    <td><a class="btn btn-danger text-nowrap" href="/remove_order?phone={{ row[1] }}">מחק</a></td>
                     </tr>
                 {% endfor %}
+            </tbody>
+            <tfoot></tfoot>
         </table>
     </div>  
     <form action="/" method="GET">
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">דף בית</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">דף בית</button>
     </form>
+
+
+<script>
+    // get the table element
+    var $table = document.getElementById("myTable"),
+    // number of rows per page
+    $n = 10,
+    // number of rows of the table
+    $rowCount = $table.rows.length,
+    // get the first cell's tag name (in the first row)
+    $firstRow = $table.rows[0].firstElementChild.tagName,
+    // boolean var to check if table has a head row
+    $hasHead = ($firstRow === "TH"),
+    // an array to hold each row
+    $tr = [],
+    // loop counters, to start count from rows[1] (2nd row) if the first row has a head tag
+    $i,$ii,$j = ($hasHead)?1:0,
+    // holds the first row if it has a (<TH>) & nothing if (<TD>)
+    $th = ($hasHead?$table.rows[(0)].outerHTML:"");
+    // count the number of pages
+    var $pageCount = Math.ceil($rowCount / $n);
+    // if we had one page only, then we have nothing to do ..
+    if ($pageCount > 1) {
+        // assign each row outHTML (tag name & innerHTML) to the array
+        for ($i = $j,$ii = 0; $i < $rowCount; $i++, $ii++)
+            $tr[$ii] = $table.rows[$i].outerHTML;
+        // create a div block to hold the buttons
+        $table.insertAdjacentHTML("afterend","<div id='buttons'></div");
+        // the first sort, default page is the first one
+        sort(1);
+    }
+
+// ($p) is the selected page number. it will be generated when a user clicks a button
+    function sort($p) {
+        /* create ($rows) a variable to hold the group of rows
+        ** to be displayed on the selected page,
+        ** ($s) the start point .. the first row in each page, Do The Math
+        */
+        var $rows = $th,$s = (($n * $p)-$n);
+        for ($i = $s; $i < ($s+$n) && $i < $tr.length; $i++)
+            $rows += $tr[$i];
+        
+        // now the table has a processed group of rows ..
+        $table.innerHTML = $rows;
+        // create the pagination buttons
+        document.getElementById("buttons").innerHTML = pageButtons($pageCount,$p);
+        // CSS Stuff
+        document.getElementById("id"+$p).setAttribute("class","active");
+    }
+
+
+    // ($pCount) : number of pages,($cur) : current page, the selected one ..
+    function pageButtons($pCount,$cur) {
+        /* this variables will disable the "Prev" button on 1st page
+        and "next" button on the last one */
+        var	$prevDis = ($cur == 1)?"disabled":"",
+            $nextDis = ($cur == $pCount)?"disabled":"",
+            /* this ($buttons) will hold every single button needed
+            ** it will creates each button and sets the onclick attribute
+            ** to the "sort" function with a special ($p) number..
+            */
+            $buttons = "<input type='button' value='<< הקודם' onclick='sort("+($cur - 1)+")' "+$prevDis+">";
+        for ($i=1; $i<=$pCount;$i++)
+            $buttons += "<input type='button' id='id"+$i+"'value='"+$i+"' onclick='sort("+$i+")'>";
+        $buttons += "<input type='button' value='הבא >>' onclick='sort("+($cur + 1)+")' "+$nextDis+">";
+        return $buttons;
+    }
+</script>
 </body>
 </html>
