--- a/backend/templates/view_analytics.html
+++ b/backend/templates/view_analytics.html
@@ -4,9 +4,11 @@
     <title>הזמנות שלא נמסרו</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+
 </head>
 <body>
-    <img src="{{url_for('static', filename='images/logo2.png')}}" class="logo" alt="test">
+  <a href="/"><img src="{{url_for('static', filename='images/NOMINOMI-logos_white.png')}}" class="logo" alt="test"></a>  
     <h1>ניתוח נתונים</h1>
     <div class="row">
 
@@ -34,7 +36,7 @@
 
     </div>
     <form action="/" method="GET">
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">דף הבית</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">דף הבית</button>
     </form>
 
 </body>
