--- a/backend/templates/view_undelivered_orders.html
+++ b/backend/templates/view_undelivered_orders.html
@@ -4,13 +4,15 @@
     <title>הזמנות שלא נמסרו</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+
 </head>
 <body>
-    <img src="{{url_for('static', filename='images/logo2.png')}}" class="logo" alt="test">
+    <a href="/"><img src="{{url_for('static', filename='images/NOMINOMI-logos_white.png')}}" class="logo" alt="test"></a>
     <h1>הזמנות שלא נמסרו</h1>
     <div class="table-responsive container-fluid">
         <table class="table table-hover">
-            <tr class="table-info ">
+            <tr class="table-dark">
                 {% for header in headings %}
                 <th>{{ header }}</th>
                 {% endfor %}
@@ -20,12 +22,14 @@
                     {% for cell in row %}
                         <td>{{ cell }}</td>
                     {% endfor %}
+                    <td><a class="btn btn-info text-nowrap" href="/is_order_exists?phone={{ row[1] }}">לעדכון</a></td>
+                    <td><a class="btn btn-danger text-nowrap" href="/remove_order?phone={{ row[1] }}">מחק</a></td>
                     </tr>
                 {% endfor %}
         </table>
     </div>
     <form action="/" method="GET">
-        <button type="submit" value="Submit" class="btn btn-info text-nowrap btn-lg">דף הבית</button>
+        <button type="submit" value="Submit" class="btn btn-primary text-nowrap btn-lg">דף הבית</button>
     </form>
 </body>
 </html>
